Create index.html with structured content and styles
Added a complete HTML structure with styling and content.

--- a/index.html
+++ b/index.html
@@ -1,2 +1,78 @@
-<h1>Hello</h1>
-<p>This is my website.</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Barsa Rani Dey</title>
+  <style>
+    body {
+      font-family: "Georgia", serif;
+      background: #f5f4ef;
+      color: #2e2e2e;
+      max-width: 760px;
+      margin: auto;
+      padding: 48px 24px;
+      line-height: 1.8;
+    }
+
+    h1 { font-weight: normal; font-size: 34px; }
+    h2 { font-weight: normal; margin-top: 48px; }
+    p { margin: 16px 0; }
+    img { width: 100%; border-radius: 12px; margin: 28px 0; }
+
+    .soft { color: #6b6b6b; }
+    .divider { margin: 60px 0; text-align: center; color: #aaa; }
+  </style>
+</head>
+
+<body>
+
+<h1>Understanding how life becomes diverse</h1>
+
+<p>
+I am drawn to the quiet forces that shape existence—evolution, memory,
+environment, and time.
+</p>
+
+<p>
+My work in biological data and medical imaging is one path into this question.
+My journeys through places, food, and living traditions are another.
+Together, they form a single pursuit:
+<strong>to understand how complexity becomes meaning.</strong>
+</p>
+
+<div class="divider">—</div>
+
+<h2>Research</h2>
+<p class="soft">
+Radiogenomics · Machine learning in biology · Cognition and evolution
+</p>
+
+<p>
+Through images, data, and computation, I try to listen to the subtle
+patterns through which biology speaks.
+</p>
+
+<div class="divider">—</div>
+
+<h2>Journeys & Fragments</h2>
+<p>
+I travel to listen—to landscapes shaped by climate, foods shaped by
+survival, and traditions shaped by centuries of memory.
+</p>
+
+<p>
+Photography and writing allow me to hold these moments gently,
+as questions rather than conclusions.
+</p>
+
+<!-- Add your first travel photo later -->
+<!-- <img src="photo1.jpg" alt="Journey"> -->
+
+<div class="divider">—</div>
+
+<h2>Contact</h2>
+<p class="soft">
+Email: your@email.com
+</p>
+
+</body>
+</html>
