Add link to travel notes in First Journey section

--- a/journeys.html
+++ b/journeys.html
@@ -31,6 +31,8 @@ small encounters that continue to shape how I understand life.
 
 <div class="place">
 <h2>First Journey</h2>
+<p><a href="journeys.html">Read my travel notes →</a></p>
+
 
 
 <p>
