Add navigation links to index.html

--- a/index.html
+++ b/index.html
@@ -131,4 +131,14 @@ Email: barsadey123@email.com
 </p>
 
 </body>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="research.html">Research</a>
+  <a href="journeys.html">Journeys</a>
+  <a href="stories.html">Stories</a>
+  <a href="beliefs.html">Beliefs</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
 </html>
