Link external stylesheet in index.html
Replaced internal CSS with external stylesheet link.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Barsa Rani Dey</title>
-  <style>
+  <link rel="stylesheet" href="style.css">
     body {
       font-family: "Georgia", serif;
       background: #f5f4ef;
